Update Herder URLs

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -301,7 +301,7 @@
             </li>
             <li lang="de"><i class="booktitle">Das Ende der Gewalt. Analyse des Menschheitsverhängnisses. Erkundungen zu Mimesis und Gewalt mit Jean-Michel Oughourlian und Guy Lefort</i>.
               Aus dem Französischen von Elisabeth Mainberger-Ruh. Herder, 2009.
-              <a href="http://herder.de/suche/exp/details?k_tnr=29385%26sort=1%26query_start=%26titel=Das%20Ende%20der%20Gewalt"><abbr>ISBN</abbr> 978-3-451-29385-6</a>.
+              <a href="https://www.herder.de/theologie-pastoral-shop/das-ende-der-gewalt-gebundene-ausgabe/c-37/p-1437/" hreflang="de"><abbr>ISBN</abbr> 978-3-451-29385-6</a>.
             </li>
             <li lang="nl"><i class="booktitle">Wat vanaf het begin der tijden verborgen was &hellip;</i>. Kampen: Kok Agora; Kapellen: DNB/Pelckmans, 1990.
               <!--@@ISBN-->
@@ -470,7 +470,7 @@
         </li>
         <li class="book" lang="fr">Girard, René; Gounelle, André; Houziaux, Alain:
           <i class="booktitle">Dieu, une invention ?</i>. Ivry-sur-Seine: Les Éditions de l’Atelier, 2007.
-          <a href="http://www.editionsatelier.com//index.php?page=shop.product_details%26flypage=bookshop-flypage.tpl%26product_id=283%26category_id=3%26option=com_virtuemart%26Itemid=1"><abbr>ISBN</abbr> 9782708239227</a>.
+          <a href="http://www.editionsatelier.com/index.php?page=shop.product_details%26flypage=bookshop-flypage.tpl%26product_id=283%26category_id=3%26writer_id=225%26option=com_virtuemart%26Itemid=1"><abbr>ISBN</abbr> 9782708239227</a>.
         </li>
         <li class="book" lang="fr">Girard, René:
           <i class="booktitle">De la violence à la divinité</i>. Grasset, 2007.
@@ -543,7 +543,7 @@
         </li>
         <li class="book" lang="de">Schwager, Raymund; <span lang="fr">Girard, René</span>:
           <i class="booktitle">Briefwechsel mit René Girard</i>. Hrsg. v. Wandinger, Nikolaus &amp; Peter, Karin. Raymund Schwager Gesammelte Schriften, Band 6.
-          Herder, 2014. <a href="http://herder.de/suche/exp/details?k_tnr=34226%26sort=1%26query_start=%26titel=Briefwechsel%20mit%20Ren%E9%20Girard"><abbr>ISBN</abbr> 978-3-451-34226-4</a>.
+          Herder, 2014. <a href="https://www.herder.de/theologie-pastoral-shop/briefwechsel-mit-ren%c3%a9-girard-gebundene-ausgabe/c-37/p-3011/"><abbr>ISBN</abbr> 978-3-451-34226-4</a>.
           <span lang="de">Correspondence with the jesuit <span lang="de">Raymund Schwager</span>, who was theology professor at the University of Innsbruck.</span>
         </li>
         <li class="book" lang="fr">Girard, René; Haven, Cynthia L. (editor):
