Add ISBN numbers for Dutch translations

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -251,7 +251,7 @@
             </li>
             <li lang="nl"><i class="booktitle">God en geweld. Over de oorsprong van mens en cultuur</i>.
               Vertaald door Michel Perquy. Tielt: Lannoo/Mimesis, 1993.
-              <!--@@ISBN -->
+              <abbr>ISBN</abbr> 90-209-2269-6
             </li>
           </ul>
         </li>
@@ -304,7 +304,7 @@
               <a href="https://www.herder.de/theologie-pastoral-shop/das-ende-der-gewalt-gebundene-ausgabe/c-37/p-1437/" hreflang="de"><abbr>ISBN</abbr> 978-3-451-29385-6</a>.
             </li>
             <li lang="nl"><i class="booktitle">Wat vanaf het begin der tijden verborgen was &hellip;</i>. Kampen: Kok Agora; Kapellen: DNB/Pelckmans, 1990.
-              <!--@@ISBN-->
+              <abbr>ISBN</abbr> 90-289-1320-3
             </li>
           </ul>
         </li>
@@ -322,7 +322,7 @@
               <a href="https://jhupbooks.press.jhu.edu/content/scapegoat"><abbr>ISBN</abbr> 9780801839177</a>.
             </li>
             <li lang="nl"><i class="booktitle">De zondebok</i>. Kampen: Kok Agora; Kapellen: DNB/Pelckmans, 1986.
-              <!--@@ISBN-->
+              <abbr>ISBN</abbr> 90-289-1127-8. (2001 reprint: <abbr>ISBN</abbr> 90-289-2969-X)
             </li>
           </ul>
         </li>
@@ -340,7 +340,7 @@
               <!--@@ISBN-->
             </li>
             <li lang="nl"><i class="booktitle">De aloude weg der boosdoeners</i>. Kampen: Kok Agora; Kapellen: DNB/Pelckmans, 1987.
-              <!--@@ISBN-->
+              <abbr>ISBN</abbr> 90-289-1281-9.
             </li>
           </ul>
         </li>
@@ -376,7 +376,7 @@
             </li>
             <li lang="nl"><i class="booktitle">Shakespeare: Het schouwspel van de afgunst</i>.
               Vertaald door <a href="http://perquy.net/nl/portfolio-detail/girard-rene/">Michel Perquy</a>.
-              Tielt: Lannoo/Mimesis, 1995.<!--@@ISBN-->
+              Tielt: Lannoo/Mimesis, 1995. <abbr>ISBN</abbr> 90-209-2723-X.
             </li>
           </ul>
         </li>
@@ -402,7 +402,7 @@
               <a href="https://www.hanser-literaturverlage.de/buch/ich-sah-den-satan-vom-himmel-fallen-wie-einen-blitz/978-3-446-20230-6/"><abbr>ISBN</abbr> 978-3-446-20230-6</a>.
             </li>
             <li lang="nl"><i class="booktitle">Ik zie Satan vallen als een bliksem</i>. Kampen: Kok Agora; Kapellen: DNB/Pelckmans, 2000.
-              <!--@@ISBN-->
+              <abbr>ISBN</abbr> 90-289-2881-2.
             </li>
           </ul>
         </li>
@@ -464,7 +464,7 @@
               <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=46922"><abbr>ISBN</abbr> 9782081307773</a>.
             </li>
             <li lang="nl"><i class="booktitle">Waarheid of zwak geloof? Dialoog over christendom en relativisme</i>. Kampen: Pelckmans, 2008.
-              <!--@@ISBN-->
+              <abbr>ISBN</abbr> 978-90-289-3839-7.
             </li>
           </ul>
         </li>
