Add: ISBN Hiob: ein Weg aus der Gewalt

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -337,7 +337,7 @@
               <a href="http://www.sup.org/books/title/?id=2669"><abbr>ISBN</abbr> 9780804714044</a>.
             </li>
             <li lang="de"><i class="booktitle">Hiob: ein Weg aus der Gewalt</i>. Aus dem Französischen von Elisabeth Mainberger-Ruh. Zürich: Benziger, 1990.
-              <!--@@ISBN-->
+              <abbr>ISBN</abbr> 3545700119.
             </li>
             <li lang="nl"><i class="booktitle">De aloude weg der boosdoeners</i>. Kampen: Kok Agora; Kapellen: DNB/Pelckmans, 1987.
               <abbr>ISBN</abbr> 90-289-1281-9.
