Add: Rocha: Shakespearean Cultures

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -469,8 +469,8 @@
           </ul>
         </li>
         <li class="book" lang="fr">Girard, René; Gounelle, André; Houziaux, Alain:
-          <i class="booktitle">Dieu, une invention ?</i>. Ivry-sur-Seine: Les Éditions de l’Atelier, 2007.
-          <a href="http://www.editionsatelier.com/index.php?page=shop.product_details%26flypage=bookshop-flypage.tpl%26product_id=283%26category_id=3%26writer_id=225%26option=com_virtuemart%26Itemid=1"><abbr>ISBN</abbr> 9782708239227</a>.
+          <i class="booktitle">Dieu, une invention ?</i>. Ivry-sur-Seine: <a href="http://www.editionsatelier.com/" hreflang="fr">Les Éditions de l’Atelier</a>, 2007.
+          <abbr>ISBN</abbr> 9782708239227.
         </li>
         <li class="book" lang="fr">Girard, René:
           <i class="booktitle">De la violence à la divinité</i>. Grasset, 2007.
@@ -770,6 +770,12 @@
         <li><span lang="es">Moreno Fernández, Agustín:
           <a href="http://www.gazeta-antropologia.es/?p=4455" hreflang="es">La teoría mimética de René Girard. Una visión crítica</a>,
           <i class="journal">Gazeta de Antropología</i></span>, 30.1 (2014).
+        </li>
+        <li><span lang="pt">Rocha, João Cezar de Castro</span:
+          <i class="booktitle">Shakespearean Cultures: Latin America and the Challenges of Mimesis in Non-Hegemonic Circumstances</i>.
+          Translated by Flora Thomson-DeVeaux. Studies in Violence, Mimesis &amp; Culture. Michigan State University Press, 2019. (364 pages)
+          <a href="https://msupress.org/9781611863130/shakespearean-cultures/"><abbr>ISBN</abbr> 9781611863130</a>.
+          <br />Original title: <i class="booktitle" lang="pt">¿Culturas shakespearianas? Teoría mimética y América Latina</i>.
         </li>
         <li lang="fr">Vinolo, Stéphane:
           <i class="booktitle">René Girard&nbsp;: du mimétisme à l'hominisation&nbsp;: La violence différante</i>. L'Hermattan, 2006.
