Add: De Keukelaere: What Is Deviated Transcendancy?

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -637,6 +637,11 @@
           on Paul Nuechterlein's Girardian Lectionary website.
           <!--See also http://stmaryvalleybloom.org/violence.html -->
         </li>
+        <li>De Keukelaere, Simon:
+          <a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.514.7959">What Is Deviated Transcendancy? Woolf's The Waves as a Textbook Case</a>,
+          <i class="website">Imitatio.org</i>.
+          <!--@@PDF at http://www.imitatio.org/uploads/tx_rtgfiles/What_is_Deviated_Transcendency.pdf -->
+        </li>
         <li><span lang="fr">Donnadieu, Gérard:
           <i class="booktitle">La violence dévoiléé. Pour comprendre René Girard</i>. Saint-Léger Production</span>s, 2017.
           <a href="http://saintlegerproductions.fr/Livres/La-violence-devoilee/La-violence-devoilee.html"><abbr>ISBN</abbr> 978236452930</a>.
@@ -771,7 +776,7 @@
           <a href="http://www.gazeta-antropologia.es/?p=4455" hreflang="es">La teoría mimética de René Girard. Una visión crítica</a>,
           <i class="journal">Gazeta de Antropología</i></span>, 30.1 (2014).
         </li>
-        <li><span lang="pt">Rocha, João Cezar de Castro</span:
+        <li><span lang="pt">Rocha, João Cezar de Castro</span>:
           <i class="booktitle">Shakespearean Cultures: Latin America and the Challenges of Mimesis in Non-Hegemonic Circumstances</i>.
           Translated by Flora Thomson-DeVeaux. Studies in Violence, Mimesis &amp; Culture. Michigan State University Press, 2019. (364 pages)
           <a href="https://msupress.org/9781611863130/shakespearean-cultures/"><abbr>ISBN</abbr> 9781611863130</a>.
@@ -1280,15 +1285,18 @@
       <ul>
         <li lang="fr">Girard, René:
           <i class="booktitle"></i>. .
-          <a href=""><abbr>ISBN</abbr> </a>. 
+          <a href=""><abbr>ISBN</abbr> </a>.
         </li>
         <li>:
           <i class="booktitle"></i>. .
-          <a href=""><abbr>ISBN</abbr> </a>. 
+          <a href=""><abbr>ISBN</abbr> </a>.
         </li>
         <li lang="fr">:
           <i class="booktitle"></i>. .
-          <a href=""><abbr>ISBN</abbr> </a>. 
+          <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+        <li>:
+          <a href=""></a>.
         </li>
       </ul>
     </section>
