Fix Unicode Normalization issue

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -776,11 +776,11 @@
           <a href="http://www.gazeta-antropologia.es/?p=4455" hreflang="es">La teoría mimética de René Girard. Una visión crítica</a>,
           <i class="journal">Gazeta de Antropología</i></span>, 30.1 (2014).
         </li>
-        <li><span lang="pt">Rocha, João Cezar de Castro</span>:
+        <li><span lang="pt">Rocha, João Cezar de Castro</span>:
           <i class="booktitle">Shakespearean Cultures: Latin America and the Challenges of Mimesis in Non-Hegemonic Circumstances</i>.
           Translated by Flora Thomson-DeVeaux. Studies in Violence, Mimesis &amp; Culture. Michigan State University Press, 2019. (364 pages)
           <a href="https://msupress.org/9781611863130/shakespearean-cultures/"><abbr>ISBN</abbr> 9781611863130</a>.
-          <br />Original title: <i class="booktitle" lang="pt">¿Culturas shakespearianas? Teoría mimética y América Latina</i>.
+          <br />Original title: <i class="booktitle" lang="pt">¿Culturas shakespearianas? Teoría mimética y América Latina</i>.<!--Text run is not in Unicode Normalization Form C?-->
         </li>
         <li lang="fr">Vinolo, Stéphane:
           <i class="booktitle">René Girard&nbsp;: du mimétisme à l'hominisation&nbsp;: La violence différante</i>. L'Hermattan, 2006.
