Add: Eagleton: Why Marx Was Right

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -212,6 +212,16 @@
           <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-697-6.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-697-6</a>.
           <!--@@see also http://www.theorie.org/titel/697_kritik_der_politischen_oekonomie -->
         </li>
+        <li>Eagleton, Terry:
+          <i class="booktitle">Why Marx Was Right</i>. Yale University Press, 2018. (280 pages)
+          <a href="https://yalebooks.yale.edu/book/9780300231069/why-marx-was-right"><abbr>ISBN</abbr> 9780300231069</a>.
+          <!--Reviews:
+            * Brady, Michael Patrick: "'Why Marx Was Right' from a Witty, Insightful Thinker with a Penchant for Glib Asides and Wry Dash", PopMatters, 11.04.2011: https://www.popmatters.com/139061-why-marx-was-right-by-terry-eagleton-2496057336.html
+            * Hatherley, Owen: "Why Marx Was Right by Terry Eagleton – review", The Guardian, 21.05.2011: https://www.theguardian.com/books/2011/may/21/why-marx-right-terry-eagleton-review
+            * Harper, Stephen: "Why Keynes was wrong", Radical Philosophy, January-February 2012: https://staging.radicalphilosophy.com/reviews/individual-reviews/why-keynes-was-wrong
+            * Caldwell, Roger: "Why Marx Was Right by Terry Eagleton", Philosophy Now, 2013: https://philosophynow.org/issues/96/Why_Marx_Was_Right_by_Terry_Eagleton
+          -->
+        </li>
         <li>Wolff, Richard D.:
           <i class="booktitle">Understanding Marxism</i>. Democracy at Work, 2018.
           <a href="https://www.democracyatwork.info/books#bookUM"><abbr>ISBN</abbr> 978-0-359-46702-0</a>.
