Add: Fusaro: Schon wieder Marx

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -222,6 +222,13 @@
             * Caldwell, Roger: "Why Marx Was Right by Terry Eagleton", Philosophy Now, 2013: https://philosophynow.org/issues/96/Why_Marx_Was_Right_by_Terry_Eagleton
           -->
         </li>
+        <li>Fusaro, Diago<span lang="de">:
+          <i class="booktitle">Schon wieder Marx. Die Wiederkehr der Revolution</i>.
+          Übersetzt von Jenny Perelli. Westend Verlag</span>, 2018. (96 pages)
+          <a href="https://www.westendverlag.de/buch/schon-wieder-marx/"><abbr>ISBN</abbr> 9783864891816</a>.
+          <br />See also Fusaro's article
+          <a href="https://www.westendverlag.de/kommentare/die-rueckkehr-eines-verdraengten/" hreflang="de" lang="de">Die Rückkehr eines Verdrängten</a>.
+        </li>
         <li>Wolff, Richard D.:
           <i class="booktitle">Understanding Marxism</i>. Democracy at Work, 2018.
           <a href="https://www.democracyatwork.info/books#bookUM"><abbr>ISBN</abbr> 978-0-359-46702-0</a>.
