--- a/humanities/index.html
+++ b/humanities/index.html
@@ -290,7 +290,7 @@
           <a href="https://blog.brill.com/humanitiesmatter/">On the Relevance of the Humanities (#HumanitiesMatter)</a>,
           <i class="website">Brill blog</i> (no date, presumably October 2019).
           See also
-          <a href="https://twitter.com/Brill_ME_Africa/status/1181524831436759040">Brill's tweet from 8 October 2019.
+          <a href="https://twitter.com/Brill_ME_Africa/status/1181524831436759040">Brill's tweet from 8 October 2019</a>.
         </li>
         <li>James, Sara; Midford, Sarah:
           <a href="https://techxplore.com/news/2019-12-tech-apocalypse-ethics-arts.html">To stop a tech apocalypse we need ethics and the arts</a>,
