Fix incorrect character references

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -225,7 +225,7 @@
         <a href="https://centerforinquiry.org/blog/which_books_do_freethinkers_consider_essential_reading/">Which Books Do Freethinkers Consider Essential Reading?</a>,
         <i class="blog">Center for Inquiry blog</i>, 14.10.2010.
         <br />This blog posts lists books suggested by people such as Sam Harris, Neil deGrasse Tyson, Phil Plait and Massimo Pigliucci.
-        The following books are the &ldquo;essential ten&dquo;:
+        The following books are the &ldquo;essential ten&rdquo;:
         <ol>
           <li><i class="booktitle">Why I Am Not a Christian</i> by Bertrand Russell;</li>
           <li><i class="booktitle">The Demon-Haunted World: Science as a Candle in the Dark </i> by Carl Sagan;</li>
