Fix validation error

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <a href="https://fivebooks.com/best-books/les-back-academia/">The best books on Academia</a>,
         <i class="website">Five Books</i>, April 2018. Les Back is the author of
         <i class="booktitle">Academic Diary: Or Why Higher Education Still Matters</i> 
-        (<a href="https://mitpress.mit.edu/books/academic-diary"><abbr>MIT</abbr> Press, 2016).
+        (<a href="https://mitpress.mit.edu/books/academic-diary"><abbr>MIT</abbr> Press, 2016</a>).
         His recommendations are
         <i class="booktitle">Killing Thinking: The Death of the Universities</i>
         (<a href="https://www.bloomsbury.com/us/killing-thinking-9780826488329/">Continuum, 2004</a>) by Mary Evans,
