Add missing website name; fix validation error

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -428,7 +428,7 @@
       </li>
       <li><span lang="de">Kreiß, Christian</span>:
         <a href="https://background.tagesspiegel.de/digitalisierung/geschenk-mit-haken-facebooks-ethik-institut-an-der-tu-muenchen">Geschenk mit Haken – Facebooks Ethik-Institut an der <abbr>TU</abbr> München</a>,
-        <i class="newspaper">Tagesspiegel Background</i></li>, 18.12.2019.
+        <i class="newspaper">Tagesspiegel Background</i>, 18.12.2019.
         <br /><q lang="de">Falls die Forschung oder die veröffentlichten Ergebnisse nicht im Sinne von Facebook verlaufen, können die Mittel jederzeit nach Belieben gestoppt werden.</q>.
       </li>
       <li><span lang="de">Hao, Karen:
@@ -529,7 +529,7 @@
       </li>
       <li>
         <a href="https://www.siliconrepublic.com/machines/deep-learning-course-ichec">What can you learn about deep learning in just five days?</a>,
-        <i class="website">
+        <i class="website">Siliconrepublic</i>, 14.09.2018.
       </li>
       <li>Farris, Mic:
         <a href="https://www.datasciencecentral.com/profiles/blogs/the-fundamentals-of-data-science">The Fundamentals of Data Science</a>,
