Fix validation error

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1970,7 +1970,7 @@
           <a href="https://academic.oup.com/aristotelian/article/64/1/85/1805497">V—Intention and Interpretation in Criticism</a>,
           <i class="journal">Proceedings of the Aristotelian Society</i>, Volume 64, Issue 1, 1 June 1964, Pages 85–106, 
           <abbr>DOI</abbr>: <a href="https://doi.org/10.1093/aristotelian/64.1.85">https://doi.org/10.1093/aristotelian/64.1.85</a>.
-          (Free <abbbr>PDF</abbbr>.)<!--@@PDF-->
+          (Free <abbbr>PDF</abbr>.)<!--@@PDF-->
         </li>
         <li><abbr title="Institute of Art and Ideas">IAI</abbr> News Editorial Staff:
           <a href="https://iainews.iai.tv/articles/70-philosophy-books-everyone-should-read-auid-1168">70 Philosophy Books Everyone Should Read</a>,
@@ -2255,7 +2255,7 @@
             <li><a href="https://www.hackettpublishing.com/a-study-of-spinoza-s-ethics"><i class="booktitle">A Study of Spinoza's Ethics</i></a>
               by Jonathan Bennett (Hackett, 1984),
             </li>
-            <li><a href="https://global.oup.com/academic/product/the-explainability-of-experience-9780199350162"><i class="booktitle">The Explainability of Experience: Realism and Subjectivity in Spinoza's Theory of the Human Mind</i>
+            <li><a href="https://global.oup.com/academic/product/the-explainability-of-experience-9780199350162"><i class="booktitle">The Explainability of Experience: Realism and Subjectivity in Spinoza's Theory of the Human Mind</i></a>
               by Ursula Renz (Oxford University Press, 2018),
             </li>
             <li><a href="https://global.oup.com/academic/product/spinoza-on-philosophy-religion-and-politics-9780198701217"><i class="booktitle">Spinoza on Philosophy, Religion, and Politics: The Theologico-Political Treatise</i></a>
