Fix validation error

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -424,7 +424,7 @@
             Singer's counterarguments to common objections make the reader think about a central issue in philosophy);
           </li>
           <li>
-            <a href="https://en.wikipedia.org/wiki/Justice:_What%27s_the_Right_Thing_to_Do%3F" aria-label="'Justice: What's the Right Thing to Do?' on Wikipedia"><i class="booktitle">Justice: What's the Right Thing to Do?</i>
+            <a href="https://en.wikipedia.org/wiki/Justice:_What%27s_the_Right_Thing_to_Do%3F" aria-label="'Justice: What's the Right Thing to Do?' on Wikipedia"><i class="booktitle">Justice: What's the Right Thing to Do?</i></a>
             (2009) by Michael Sandel (a book about political philosophy that grew out of course at Harvard University by a philosopher who can bring philosophy alive);
           </li>
           <li>
