Fix nesting error (blockquote in p) / validation

--- a/humanities/the-one-whose-name-must-not-be-mentioned.html
+++ b/humanities/the-one-whose-name-must-not-be-mentioned.html
@@ -115,7 +115,7 @@
   <p>The above theory does not explain the origin of all religions; it is a theory about religious practices that emerged as a result psycho-social mechanisms, not about religions that have a historical "founding father", e.g. Christianity, Islam and Buddhism. However, it is possible that these newer religions incorporated ancient beliefs and taboos instead of replacing them entirely. In addition, Girard also describes how the Old Testament subverts the belief in the guilt of the sacrificial victim. For example, the myth about Romulus and Remus is very similar to the story of Cain and Abel, but with an important difference: the God of the Old Testament does not let Cain get away with Abel's murder. (For more about this, see <em>Things Hidden Since the Foundation of the World</em>.)</p>
 
   <hr>
-  <p>Within less than an after its submission<!--submission: 13:12; deletions: 14:09-->, the text of the above answer was reduced to 36 percent of its original length
+  <p>Within less than an after its submission<!--submission: 13:12; deletion: 14:09-->, the text of the above answer was reduced to 36 percent of its original length
     by Rand al'Thor because he felt that it contained <q>unnecessary proselytising</q>.
     <!--
       Original size of output (LibreOffice word count & char count): 1151 words / 6927 characters [https://literature.stackexchange.com/revisions/11650/1 ]
@@ -123,10 +123,10 @@
       resulting size of output (LibreOffice word count & char count): 418 words / 2414 characters [https://literature.stackexchange.com/revisions/11650/2 ], i.e. 36.3 percent of the original length.
     -->
     The full revision comment read (only registered users have access to the <a href="https://literature.stackexchange.com/posts/11650/revisions">revision history</a>):
-    <blockquote cite="https://literature.stackexchange.com/posts/11650/revisions">Feel free to roll back this edit if you really want to include all that massive text about a theory on the origin of religion, but I won't give a green tick to an answer with that much unnecessary proselytising.
-      In the spirit of significantly editing others' posts to improve the site &hellip; :-)
-    </blockquote>
   </p>
+  <blockquote cite="https://literature.stackexchange.com/posts/11650/revisions">Feel free to roll back this edit if you really want to include all that massive text about a theory on the origin of religion, but I won't give a green tick to an answer with that much unnecessary proselytising.
+    In the spirit of significantly editing others' posts to improve the site &hellip; :-)
+  </blockquote>
   <p>
     A <a href="https://chat.stackexchange.com/transcript/message/51535413#51535413">follow-up comment in the chat area</a> later asked,
     <blockquote cite="https://chat.stackexchange.com/transcript/message/51535413#51535413">Did I misunderstand something, or is the non-existence of any actual deity an unstated assumption in that entire theory?</blockquote>
