Fix validation error

--- a/humanities/the-one-whose-name-must-not-be-mentioned.html
+++ b/humanities/the-one-whose-name-must-not-be-mentioned.html
@@ -131,16 +131,16 @@
     A <a href="https://chat.stackexchange.com/transcript/message/51535413#51535413">follow-up comment in the chat area</a> later asked,
     <blockquote cite="https://chat.stackexchange.com/transcript/message/51535413#51535413">Did I misunderstand something, or is the non-existence of any actual deity an unstated assumption in that entire theory?</blockquote>
     <a href="https://chat.stackexchange.com/transcript/message/51535529#51535529">Other objections that were posted soon afterwards</a> went as follows:
-    <div class="blockquote">
-      <blockquote cite="https://chat.stackexchange.com/transcript/message/51535529#51535529">I have no issue with agnostics, but true atheists, who believe absolutely in the non-existence of any deity, have as much a faith-based position as believers in God.</blockquote>
-      <!--"true atheists" if a fallacy known as "persuasive definition" / https://en.wikipedia.org/wiki/Persuasive_definition or "definist fallacy" / https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/75/Definist-Fallacy
-        See also the "no true Scotsman" fallacy: https://en.wikipedia.org/wiki/No_true_Scotsman
-      -->
-      <blockquote cite="https://chat.stackexchange.com/transcript/message/51535551#51535551">And a theory which holds that the idea of a god emerged from violence and human sacrifice, or any other purely human interaction, logically depends on the assumption that there is no actual god.</blockquote>
-    </div>
   </p>
+  <div class="blockquote">
+    <blockquote cite="https://chat.stackexchange.com/transcript/message/51535529#51535529">I have no issue with agnostics, but true atheists, who believe absolutely in the non-existence of any deity, have as much a faith-based position as believers in God.</blockquote>
+    <!--"true atheists" is a fallacy known as "persuasive definition" / https://en.wikipedia.org/wiki/Persuasive_definition or "definist fallacy" / https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/75/Definist-Fallacy
+      See also the "no true Scotsman" fallacy: https://en.wikipedia.org/wiki/No_true_Scotsman
+    -->
+    <blockquote cite="https://chat.stackexchange.com/transcript/message/51535551#51535551">And a theory which holds that the idea of a god emerged from violence and human sacrifice, or any other purely human interaction, logically depends on the assumption that there is no actual god.</blockquote>
+  </div>
   <p>
-    Based on the the speed of the deletion (within an hours), its size (74 percent of the text) and its justification (it assumes the non-existence of a deity),
+    Based on the the speed of the deletion (within an hour), its size (74 percent of the text) and its justification (it assumes the non-existence of a deity),
     it appears that it the answer was objectionable because a theory about the origin of religion should not assume that a god (or gods) does not exist.
     There are several issues with Rand al'Thor's reaction.
   </p>
