Remove ampersands from URLs

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -169,12 +169,12 @@
       <li>Childers, Timothy:
         <i class="booktitle">Philosophy and Probability</i>.
         Oxford University Press, 2013. (216 p.)
-        <a href="https://global.oup.com/academic/product/philosophy-and-probability-9780199661831?q=probability%20and%20philosophy&lang=en&cc=de"><abbr>ISBN</abbr> 9780199661831</a>.
+        <a href="https://global.oup.com/academic/product/philosophy-and-probability-9780199661831"><abbr>ISBN</abbr> 9780199661831</a>.
       </li>
       <li>Hájek, Alan; Hitchcock, Christopher, eds.:
         <i class="booktitle">The Oxford Handbook of Probability and Philosophy</i>.
         Oxford University Press, 2016. (832 p.)
-        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-probability-and-philosophy-9780199607617?cc=de&lang=en&"><abbr>ISBN</abbr> 9780199607617</a>.
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-probability-and-philosophy-9780199607617"><abbr>ISBN</abbr> 9780199607617</a>.
       </li>
     </ul>
 
