Escape ampersands in URLs

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -653,11 +653,11 @@
         </li>
         <li lang="fr">Dubouchet, Paul:
           <i class="booktitle">René Girard, "cow-boy texan". Au fil de ses exploits</i>. L'Hermattan, 2017. (176 pages)
-          <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=54094" hreflang="fr"><abbr>ISBN</abbr> 978-2-343-12503-9</a>.
+          <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&amp;obj=livre&amp;no=54094" hreflang="fr"><abbr>ISBN</abbr> 978-2-343-12503-9</a>.
         </li>
         <li lang="fr">Dubouchet, Paul:
           <i class="booktitle">Tout comprendre avec René Girard. Du moi aux grands problèmes actuels. Petit traité de la violence</i>. L'Hermattan, 2015. (218 pages)
-          <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=46340&razSqlClone=1" hreflang="fr"><abbr>ISBN</abbr> 978-2-343-05426-1</a>.
+          <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&amp;obj=livre&amp;no=46340&amp;razSqlClone=1" hreflang="fr"><abbr>ISBN</abbr> 978-2-343-05426-1</a>.
         </li>
         <li lang="fr">Dumouchel, Paul; Dupuy, Jean-Pierre, <abbr>dir.</abbr>:
           <i class="booktitle">L'auto-organisation. De la physique au politique</i>. Colloque de Cerisy, 1981. Editions du Seuil, 1983, 1994. (560 pages)
@@ -698,7 +698,7 @@
         </li>
         <li><span lang="fr">Hillion, Joël:
           <i class="booktitle">Shakespeare et son double. Les sonnets de Shakespeare à la lumière de la théorie mimétique de René Girard</i>. L'Hermattan</span>, 2011. (256 pages)
-          <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=35865"><abbr>ISBN</abbr> 978-2-296-55950-9</a>.
+          <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&amp;obj=livre&amp;no=35865"><abbr>ISBN</abbr> 978-2-296-55950-9</a>.
         </li>
         <li>Merrill, Trevor Cribben:
           <i class="booktitle">The Book of Imitation and Desire: Reading Milan Kundera with Rene Girard </i>. Bloomsbury, 2013 (2014: paperback). (208 pages)
@@ -757,7 +757,7 @@
           edited by Ian Hodder (Cambridge University Press, 2019.
           <a href="https://www.cambridge.org/us/academic/subjects/archaeology/ancient-near-east1/violence-and-sacred-ancient-near-east-girardian-conversations-catalhoyuk?format=HB"><abbr>ISBN</abbr> 9781108476027</a>).
           Ian Hodder previously also edited <i class="booktitle">Religion in the Emergence of Civilization: Çatalhöyük as a Case Study</i>, Cambridge University Press, 2010;
-          <a href="https://www.cambridge.org/us/academic/subjects/archaeology/ancient-near-east1/religion-emergence-civilization-catalhoyuk-case-study?format=PB&isbn=9780521150194"><abbr>ISBN</abbr> 9780521150194</a>.
+          <a href="https://www.cambridge.org/us/academic/subjects/archaeology/ancient-near-east1/religion-emergence-civilization-catalhoyuk-case-study?format=PB&amp;isbn=9780521150194"><abbr>ISBN</abbr> 9780521150194</a>.
           See also the
           <a href="https://www.catalhoyuk.com/research/bibliography">Bibliography of the Çatalhöyük Research Project</a>.)
         </li>
@@ -784,7 +784,7 @@
         </li>
         <li lang="fr">Vinolo, Stéphane:
           <i class="booktitle">René Girard&nbsp;: du mimétisme à l'hominisation&nbsp;: La violence différante</i>. L'Hermattan, 2006.
-          <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=20519"><abbr>ISBN</abbr> 2-7475-9047-X</a>.
+          <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&amp;no=20519"><abbr>ISBN</abbr> 2-7475-9047-X</a>.
         </li>
         <!--Wolfgang Palaver: https://uibk.academia.edu/WolfgangPalaver & https://de.wikipedia.org/wiki/Wolfgang_Palaver -->
       </ul>
