Add: Fidyk's PhD thesis 'Rewriting Scapegoat Text'

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -678,6 +678,12 @@
           <i class="journal">Carnets</i>, Deuxième série - 12</span>, 2018 (Open Acess, Creative Commons).
           <!--@@check other articles in same issue: "Théorie Mimétique et Études Littéraires": https://journals.openedition.org/carnets/2396 -->
         </li>
+        <li>Fidyk, Barbara:
+          <i class="booktitle">Rewriting Scapegoat Text: Mimetic Desire and the Dynamics of Rivalry in Michael Ondaatje's In the Skin of a Lion and The English patient, and Peter Carey's Jack Maggs and True History of the Kelly Gang</i>.
+          Submitted in fulfillment of the requirements for the degree of Doctor of Philosophy, March 2009.
+          <a href="https://ogma.newcastle.edu.au/vital/access/manager/Repository/uon:5846"><i class="booktitle">Rewriting Scapegoat Text</i> (The University of Newcastle, Australia)</a>.
+          (Open Access text available for download.)<!--@@download PDF. Identifier: http://hdl.handle.net/1959.13/44664 -->
+        </li>
         <li><span lang="fr">Florey, Sonya:
           <i class="booktitle">René Girard, critique littéraire ?</i>. Archipel Essais</span>, 2003. (97 pages)
           <a href="http://www.lcdpu.fr/livre/?GCOI=27000100979080" hreflang="fr"><abbr>ISBN</abbr> 978-2-940355-05-1</a>&nbsp;/
@@ -1283,11 +1289,11 @@
     <section>
       <h2></h2>
       <ul>
-        <li lang="fr">Girard, René:
+        <li>:
           <i class="booktitle"></i>. .
           <a href=""><abbr>ISBN</abbr> </a>.
         </li>
-        <li>:
+        <li lang="fr">Girard, René:
           <i class="booktitle"></i>. .
           <a href=""><abbr>ISBN</abbr> </a>.
         </li>
