--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -995,9 +995,8 @@
           <span lang="en-GB">as a book that changed his life.</span>
         </li>
         <li><span lang="fr">Chantre, Benoît:
-          <i class="booktitle">Les derniers jours de René Girard</i>. Paris: Bernard Grasset</span>, 2016.
-          <abbr>ISBN</abbr> 978 2 246 86231 4.
-          <!--<a href=""><abbr>ISBN</abbr> </a>.-->
+          <i class="booktitle">Les derniers jours de René Girard</i>. Paris: Bernard Grasset</span>, 2016. (24O pages)
+          <a href="https://www.grasset.fr/livres/les-derniers-jours-de-rene-girard-9782246862314"><abbr>ISBN</abbr> 978 2 246 86231 4</a>.
         </li>
       </ul>
     </section>
